# MS-Spectral-Foundation

./: .gitattributes  .gitignore  .gitmodules  README.md  large_files  pyproject.toml
MS_Spectral_Foundation/: __init__.py  analyze_embeddings.py  bin_mz.py  metadata_utils.py  mgf_parse.py  model_ssl.py  ms_spectral_foundation_Extra_Credit.ipynb  ms_spectral_foundation_tutorial.ipynb  ms_spectral_foundation_tutorial_v2.ipynb  ms_spectral_foundation_tutorial_v2_real_data.ipynb  mzml_to_mgf_new.py  peak_filter.py  run_embedding_analysis.py  spectrum_dataset.py  train.py
MS_Spectral_Foundation/test/: test_module7_8.py  test_peak_filter.py
SpatialOmics-Foundation/: data_io.py  mzml_to_mgf_new.py
documentations/: DDS.md  Module7_8_README.md  SRS.md  WBS.md  datasets.md  timeline.md
example_data/: 09062023_Mehta_GR10000524_DDRC_Sample4_561_cirrhotic_output_truncated.mgf  09062023_Mehta_GR10000524_DDRC_Sample9_0206_HCC_output_truncated.mgf
logs/embedding_analysis/: embedding_analysis_report.txt  embedding_density_scores.csv  exemplar_spectra.txt  kmeans_cluster_evaluation.csv  nearest_neighbor_results.csv  sample_similarity_matrix.csv
logs/example_embedding_analysis/: embedding_analysis_report.txt  embedding_density_scores.csv  exemplar_spectra.txt  nearest_neighbor_results.csv  sample_similarity_matrix.csv
logs/example_embedding_cache/: example_embeddings.npy  example_metadata.parquet  example_precursor_charge.npy  example_precursor_mz.npy
outputs/: model_ssl_v4_epoch019.pt
