[build-system]
#
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
#
name = "MS_Spectral_Foundation"

#
version = "0.0.1"
#
authors = [
  { name="rq"},
]
#
description = ""
#
readme = "README.md"
#
requires-python = ">=3.12"
#
dependencies = [
    "requests>=2.25.0",
    "numpy",
]
#
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["MS_Spectral_Foundation","casanovo","depthcharge"]
#
[project.urls]
#Homepage = ""